# motorola-kernel-modules

./: BUILD.bazel
drivers/input/misc/fpc_fps_mmi/: BUILD.bazel
drivers/input/touchscreen/chipone_tddi_mmi_v2/: Android.mk  Kbuild  cts_driver.c
drivers/input/touchscreen/goodix_berlin_mmi/: Android.mk  Kbuild  goodix_brl_hw.c  goodix_ts_core.c  goodix_ts_core.h
drivers/input/touchscreen/goodix_berlin_u_mmi/: Android.mk  BUILD.bazel  Kbuild  Makefile  goodix_brl_hw.c  goodix_brl_i2c.c  goodix_brl_spi.c  goodix_ts_config.c  goodix_ts_config.h  goodix_ts_core.c  goodix_ts_core.h  goodix_ts_gesture.c  goodix_ts_gesture_fod.c  goodix_ts_mmi.c  goodix_ts_mmi.h
drivers/input/touchscreen/goodix_gt96x_u_mmi/: Android.mk  BUILD.bazel  Kbuild  goodix_brl_hw.c  goodix_ts_core.c  goodix_ts_gesture.c  goodix_ts_mmi.h
drivers/input/touchscreen/ilitek_v3_mmi/: ilitek_v3_qcom.c
drivers/input/touchscreen/touchscreen_u_mmi/: Android.mk  BUILD.bazel  Kbuild  Makefile  touchscreen_mmi_class.c  touchscreen_mmi_gesture.c  touchscreen_mmi_notif.c  touchscreen_mmi_panel.c
drivers/misc/awinic/aw86927/: Android.mk  BUILD.bazel  Kbuild  aw8692x.c  haptic_hv.c  haptic_hv.h
drivers/misc/sx937x_multi/: BUILD.bazel  Kbuild  Makefile  sx937x_multi.c
drivers/misc/utag/: BUILD.bazel
drivers/mmi_info/: BUILD.bazel
drivers/mmi_relay/: BUILD.bazel  Kbuild
drivers/moto_f_usbnet/: BUILD.bazel
drivers/moto_sched/: msched_common.c
drivers/moto_sched/locking/: rwsem.c
drivers/moto_swap/: BUILD.bazel  Kbuild
drivers/nfc/st54lnfc/: BUILD.bazel
drivers/nfc/st54lnfc/st21nfc/: BUILD.bazel  Kbuild  st21nfc.c
drivers/nfc/st54lnfc/st54spi/: BUILD.bazel  Kbuild  st54spi.c
drivers/power/cps4041_mmi/: Android.mk  BUILD.bazel  Kbuild  moto_wls_auth2.0.c  moto_wls_auth2.0.h  wls_charger_cps4041.c  wls_charger_cps4041.h
drivers/power/cw2217b_fg_mmi/: Android.mk  BUILD.bazel  Kbuild  Makefile  cw2217B_fuel_gauge_base.c
drivers/power/mmi_decrete_charger_cp_qc3p/: BUILD.bazel  Kbuild  Makefile  mmi_charger_class.c  mmi_charger_class.h  mmi_charger_core.c  mmi_charger_core.h  mmi_charger_pump_policy.c  mmi_pump_charger.c  pps.c
drivers/power/mmi_gauge_class/: BUILD.bazel  Kbuild
drivers/power/qti_glink_charger/: qti_glink_charger.c
drivers/power/sc760x_charger_mmi/: Android.mk  BUILD.bazel  Kbuild  sc760x_charger_mmi.c  sc760x_charger_mmi.h
drivers/power/sc8549d/: Android.mk  BUILD.bazel  Kbuild  sc8546d_charger.c
drivers/power/smart_battery/: BUILD.bazel  Kbuild  Makefile  smart_battery_core.c  smart_battery_core.h
drivers/power/wt6670f_qc3p_mmi/: Android.mk  BUILD.bazel  Kbuild  wt6670f.h  wt6670f_qc3p.c
drivers/sensors/: BUILD.bazel
include/linux/: touchscreen_mmi.h
sound/soc/codecs/fs16xx_k510_dlkm/: Android.mk  Kbuild  fsm-dev.h  fsm_core.c  fsm_i2c.c  fsm_misc.c
