load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "sensors_class",
    srcs = glob([
        "*.c",
        "*.h",
        "Kbuild",
        "Makefile",
    ]) + [
        "//motorola/kernel/modules:public_headers",
    ],
)
