load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "smart_battery",
    srcs = glob([
        "*.c",
        "*.h",
        "Kbuild",
        "Makefile",
    ]) + [
        "//motorola/kernel/modules:public_headers",
    ],
    deps = [
        "//motorola/kernel/modules/drivers/power/mmi_gauge_class:mmi_gauge_class",
    ],
)
