load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "fpc_mtk_tee",
    srcs = glob([
        "*.c",
        "*.h",
        "Kbuild",
        "Makefile",
    ]),
    outs = ["fpc_mtk_tee.ko"],
)
