load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "touchscreen_u_mmi",
    srcs = glob([
        "*.c",
        "*.h",
        "Kbuild",
        "Makefile",
    ]) + [
        "//motorola/kernel/modules:public_headers",
    ],
    deps = [
        "//motorola/kernel/modules/drivers/sensors:sensors_class",
        "//motorola/kernel/modules/drivers/mmi_relay:mmi_relay",
    ],
    outs = ["touchscreen_u_mmi.ko"],
)
