load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "st54lnfc",
    srcs = glob([
        "*.c",
        "*.h",
        "Kbuild",
        "Makefile",
    ]),
    outs = ["st54lnfc.ko"],
)

filegroup(
    name = "st21nfc_headers",
    srcs = glob([
        "*.h",
    ]),
)
