load("//build/bazel_mgk_rules:mgk_ko.bzl", "define_mgk_ko")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ko(
    name = "st54lspi",
    srcs = glob([
        "*.c",
        "*.h",
        "Kbuild",
        "Makefile",
    ]) + [
        "//motorola/kernel/modules/drivers/nfc/st54lnfc/st21nfc:st21nfc_headers",
    ],
    outs = ["st54lspi.ko"],
)
